--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Embedded Content</title>
+<title>TextApp</title>
 </head>
   <body>
     <iframe src="https://script.google.com/macros/s/AKfycbzLjZJHrHqn-7Nitkgl0s8097De3XhybILL2lRm2m_6FD0tO3nQH_pRGyjQhn8nyRu9EQ/exec"
