--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
   <body>
     <iframe src="https://script.google.com/macros/s/AKfycbzLjZJHrHqn-7Nitkgl0s8097De3XhybILL2lRm2m_6FD0tO3nQH_pRGyjQhn8nyRu9EQ/exec"
-    allow="clipboard-read; clipboard-write"
+    allow="clipboard-read *; clipboard-write *"
     width="100%"
     height="100%"
     allowfullscreen="true"
